k8s/domains/documents/infra/ui/base/documents-ui-srv.yaml
apiVersion: v1
kind: Service

metadata:
  name: documents-ui-srv
spec:
  selector:
    app: documents-ui
  ports:
    - name: documents-ui
      port: 3000
      targetPort: 3000
