k8s/domains/documents/infra/ui/base/documents-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: documents-ui-public
spec:
  entryPoints:
    - https

  routes:
    - kind: Rule
      match: Host(`tma.com`) && Path(`/documents`)
      services:
        - name: documents-ui-srv
          port: 3000
  tls: {}
